Hay que revisar el add Edit
Hay que modificar la llamada que le hagas al back para que llame al add edit y no utilizar el put

--- a/src/app/pages/hospital/list/list.component.html
+++ b/src/app/pages/hospital/list/list.component.html
@@ -18,4 +18,8 @@
         <div class="col-5 pt-1">{{hospital.nombre}}</div>
         <div class="col-5 pt-1">{{hospital.especialidades}}</div>
     </div>
+
+</div>
+<div class="mt-3 col-8 offset-2 row">
+    <button class="btn btn-success" (click)="gotoCreateHospital()"> Añadir Hospital </button>
 </div>
