--- a/src/app/pages/persona/list/list.component.html
+++ b/src/app/pages/persona/list/list.component.html
@@ -3,11 +3,30 @@
 <div class="col-8 offset-2 row border">
     <div class="col-12 row">
         <div class="col-1"></div>
-        <div class="col-4">Nombre Persona</div>
+        <div class="col-4">Nombre</div>
         <div class="col-4">Apellidos</div>
-        <div class="col-3">Apellidos 2</div>
+        <div class="col-1">Edad</div>
+        <div class="col-2"></div>
+
     </div>
-    <div class="col-12 row rows mb-1" >
-        
+    <div>
+        <div class="col-12 row rows mb-1"  *ngFor="let persona of personas.result">
+            <div class="col-1">
+                <label class="btn col-3" (click)="gotoDetailPersona(persona.id)">
+                    &#9998;
+                </label>
+                <label class="btn offset-2 col-3" (click)="deletePersona(persona.id)">
+                    <b>X</b>
+                </label>
+            </div>
+            <div class="col-4 pt-1">{{persona.nombre}}</div>
+            <div class="col-4 pt-1">{{persona.p_Apellido}} , {{persona.s_Apellido}}</div>
+            <div class="col-1 pt-1">{{persona.edad}}</div>
+            <div class="col-2 pt-1">
+                <button class="btn btn-success" (click)="gotoCreatePaciente(persona.id)"> Añadir como Paciente</button>
+            </div>
+        </div>
     </div>
+    <button (click)="goToPage(1)">add</button>
+    <button (click)="goToPage(-1)">minus</button>
 </div>
