--- a/src/app/pages/persona/details/details.component.html
+++ b/src/app/pages/persona/details/details.component.html
@@ -1,1 +1,33 @@
-<p>details works!</p>
+
+
+<h2 class="col-10 offset-1 mb-2 pb-2 mt-3" style="border-bottom: solid 1px red;">{{!personExist ? 'Crear Persona' : personExist ?'Editar Persona':''}} </h2>
+<form class="col-10 offset-1 row" [formGroup]="personaForm" (ngSubmit)="saveDataPersona()">
+    <div class="col-4 mb-2">
+        <label class="col-4" for="nombre">Nombre Persona</label>
+        <input class="col-6" formControlName="nombre" type="text" >
+    </div>
+    <div class="col-4 mb-2">
+        <label class="col-4" for="primerApellido">Primer Apellido</label>
+        <input class="col-6" formControlName="primerApellido" type="text" >
+    </div>
+    <div class="col-4 mb-2">
+        <label class="col-4" for="segundoApellido">Segundo Apellido</label>
+        <input class="col-6" formControlName="segundoApellido" type="text" >
+    </div>
+    <div >
+        <label class="col-4" for="edad">Edad</label>
+        <input class="col-6" formControlName="edad" type="number" >
+    </div>
+    <div class="col-4 mb-2">
+        <label class="col-4" for="estado">Estado</label>
+        <select class="col-6" formControlName="estado" type="number" >
+            <option *ngFor="let estado of estadosSelect" value="{{estado.id}}">{{estado.name}}</option>
+        </select>
+    </div>
+    <div class="flex">
+        <label class="float-end">
+            <label class="btn btn-secondary" (click)="goBack()">Volver</label>
+            <button type="submit" class="btn btn-success">{{personExist ? 'Guardar' : !personExist ? 'Crear':''}}</button>
+        </label>
+    </div>
+</form>
