--- a/src/app/pages/persona/list/list.component.html
+++ b/src/app/pages/persona/list/list.component.html
@@ -7,7 +7,7 @@
         <div class="col-4">Apellidos</div>
         <div class="col-1">Edad</div>
         <div class="col-2"></div>
-
+asdfsdafasd
     </div>
     <div>
         <div class="col-12 row rows mb-1" *ngFor="let persona of personas.result">
