medico and home

--- a/src/app/componentes/nav-comp/nav-comp.component.html
+++ b/src/app/componentes/nav-comp/nav-comp.component.html
@@ -8,7 +8,8 @@
             <div class="navbar-nav">
                 <a class="nav-link pointer-event" [ngClass]="changeStyleOnActive('hospital')?'active':''" (click)="router.navigate(['/hospital'])">Hospital</a>
                 <a class="nav-link pointer-event" [ngClass]="changeStyleOnActive('persona')?'active':''" (click)="router.navigate(['/persona'])" >Personas</a>
-                <a class="nav-link pointer-event" [ngClass]="changeStyleOnActive('cv v')?'active':''" >Features</a>
+                <a class="nav-link pointer-event" [ngClass]="changeStyleOnActive('medico')?'active':''" (click)="router.navigate(['/medico'])" >Medico</a>
+
             </div>
         </div>
     </div>
