--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,8 @@
 <div class="bg">
 </div>
 <div class="container">
-    <button class="btn btn-success">1</button>
-    <button class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button><button class="btn btn-success">1</button><button
-        class="btn btn-success">1</button>
+    <button class="btn btn-success" (click)="router.navigate(['/hospital'])">Hospital</button>
+    <button class="btn btn-success" (click)="router.navigate(['/persona'])">Persona</button>
+    <button class="btn btn-success" (click)="router.navigate(['/medico'])">Medico</button>
+
 </div>
