--- a/src/app/pages/persona/list/list.component.html
+++ b/src/app/pages/persona/list/list.component.html
@@ -25,7 +25,7 @@
                     <b>X</b>
                 </label>
             </div>
-            <div class="col-4 pt-1">{{persona.nombre}}</div>
+            <div [innerText]="persona.nombre" class="col-4 pt-1"></div>
             <div class="col-4 pt-1">{{persona.p_Apellido}} , {{persona.s_Apellido}}</div>
             <div class="col-1 pt-1">{{persona.edad}}</div>
             <div class="col-2 pt-1" *ngIf="!persona.isPatient">
